[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/characters/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/assets/tests/glock.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="PlayerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
cull_mask = 1048573

[node name="glock" parent="Pivot/Camera" instance=ExtResource( 2 )]
transform = Transform( -0.0370709, -0.000700147, 0.247235, -0.00472083, 0.249955, -1.30944e-10, -0.247191, -0.00466863, -0.0370775, 0.541272, -0.42207, -1.25605 )
visible = false

[node name="ViewportContainer" type="ViewportContainer" parent="Pivot/Camera"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="Viewport" type="Viewport" parent="Pivot/Camera/ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCam" type="Camera" parent="Pivot/Camera/ViewportContainer/Viewport"]
cull_mask = 2

[node name="Raycast" type="RayCast" parent="Pivot"]
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="game_ui" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="game_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="game_ui/control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "X"
align = 1
valign = 1
